--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "vite": "^7.1.12"
+    "vite": "^6.4.1",
+    "@tailwindcss/vite": "^4.0.15"
   }
 }
